--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         sudo apt install python3-dev libpq-dev
         python -m pip install --upgrade pip
+        python -m pip install 'pyyaml >= 5.3, < 6' 
         python -m pip install -r requirements-ci.txt
         python -m pip install -e .
         sudo cp `which bddcli-bootstrapper` /usr/local/bin
