--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Build 
 
 on:
@@ -15,22 +12,28 @@ jobs:
   test:
     name: Pytest
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10', '3.11', '3.12']
+    env:
+      VENVPATH: /usr 
+      FLAKE8: flake8
+      PYTEST: pytest
+      COVERAGE: coverage
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8 
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r requirements-ci.txt
-        python -m pip install -e .
+        make env-ci
         sudo cp `which bddcli-bootstrapper` /usr/local/bin
     - name: Lint
       run: make lint
-    - name: Test with pytest
-      run: make cover 
+    - name: Test
+      run: make cover
     - name: Coveralls
       run: coveralls
       env:
@@ -41,14 +44,10 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install coveralls
+      run: python -m pip install coveralls
     - name: Coveralls Finished
       run: coveralls --finish
       env:
@@ -72,4 +71,3 @@ jobs:
         release_name: ${{ github.ref }}
         draft: false
         prerelease: false 
-
