--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,19 +16,21 @@ jobs:
       matrix:
         python-version: ['3.10', '3.11', '3.12']
     env:
-      VENVPATH: /usr 
+      PREFIX: /usr 
       FLAKE8: flake8
       PYTEST: pytest
       COVERAGE: coverage
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        make env-ci
+        git clone https://github.com/pylover/python-makelib.git make
+        make env ENV=ci
         sudo cp `which bddcli-bootstrapper` /usr/local/bin
     - name: Lint
       run: make lint
@@ -45,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
     - name: Install dependencies
       run: python -m pip install coveralls
     - name: Coveralls Finished
@@ -60,7 +62,7 @@ jobs:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
