--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,18 @@ jobs:
       FLAKE8: flake8
       PYTEST: pytest
       COVERAGE: coverage
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -30,7 +42,7 @@ jobs:
     - name: Install dependencies
       run: |
         git clone https://github.com/pylover/python-makelib.git make
-        make env ENV=ci
+        make install-common editable-install
         sudo cp `which bddcli-bootstrapper` /usr/local/bin
     - name: Lint
       run: make lint
